--- a/about.html
+++ b/about.html
@@ -7,19 +7,24 @@ permalink: /about/
 
 <html>
   <h1>Welcome to Planet Detroit Data Hub</h1>
-<p>Here you will find links to data that we have gathered and with data pertaining to environmental issues in Metro Detroit. Here is a quick guide for using this site!</p>
-<h2>Instructions for use</h2>
-<h3>Getting Data</h3>
-<p>Under the <a href="https://planet-detroit.github.io/data-hub/datasets/">&lsquo;Datasets&rsquo;</a> tab is the data catalog. Here you can search by title and description keyword, select specific &lsquo;categories&rsquo;, or select data sets from a particular organization</p>
-<p>Alternatively, under the <a href="https://planet-detroit.github.io/data-hub/organizations/">&lsquo;Organizations&rsquo;</a> tab, you can browse organizations, and on the organization's page, you can search all their related datasets.&nbsp;</p>
-<h3>Adding Data</h3>
-<p>Before starting Make sure you're logged in to Github and have access to edit the repository. If you don&rsquo;t reach out to Planet Detroit, and either ask for access or have us add it for you.</p>
-<p>On this site, data is linked out to its original source or anywhere else it happens to be hosted including GitHub, DropBox, or Google Drive. Before adding data be sure to have it hosted somewhere and get the link. If your data set comes in multiple forms they should each be linked separately.&nbsp;</p>
-<p>If your data is from an existing Organization:&nbsp;</p>
-<ol>
-<li>Under the <a href="https://planet-detroit.github.io/data-hub/datasets/">&lsquo;Datasets&rsquo;</a> tab click the <a href="https://planet-detroit.github.io/data-hub/add-dataset/">&lsquo;Add Dataset&rsquo;</a> button</li>
-<li>Fill in as much of the form as you can</li>
-<ol>
+          <p>Here you will find links to data that we have gathered and with data pertaining to environmental issues in Metro Detroit.
+            Here is a quick guide for using this site!</p>
+   <h2>Instructions for use</h2>
+       <h3>Getting Data</h3>
+          <p>Under the <a href="https://planet-detroit.github.io/data-hub/datasets/">&lsquo;Datasets&rsquo;</a> tab is the data catalog.
+            Here you can search by title and description keyword, select specific &lsquo;categories&rsquo;, or select data sets from a particular organization</p>
+          <p>Alternatively, under the <a href="https://planet-detroit.github.io/data-hub/organizations/">&lsquo;Organizations&rsquo;</a> tab, you can browse organizations, and on the organization's page, you can search all their related datasets.&nbsp;</p>
+   <h3>Adding Data</h3>
+       <p>Before starting make sure you're logged in to Github and have access to edit the repository. 
+         If you don&rsquo;t reach out to Planet Detroit, and either ask for access or have us add the data for you.</p>
+       <p>On this site, data is linked out to its original source or anywhere else it happens to be hosted including 
+         GitHub, DropBox, or Google Drive. Before adding data be sure to have it hosted somewhere and get the link. 
+         If your data set comes in multiple forms they should each be linked separately.&nbsp;</p>
+        <p>If your data is from an existing Organization:&nbsp;</p>
+          <ol>
+              <li>Under the <a href="https://planet-detroit.github.io/data-hub/datasets/">&lsquo;Datasets&rsquo;</a> tab click the <a href="https://planet-detroit.github.io/data-hub/add-dataset/">&lsquo;Add Dataset&rsquo;</a> button</li>
+               <li>Fill in as much of the form as you can</li>
+               <ol>
 <li>For each link add a new &lsquo;Resource&rdquo; by clicking the button</li>
 <li>Be sure to select as many categories as you think are relevant</li>
 </ol>
