--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@ permalink: /about/
 {% include breadcrumbs.html %}
 
 <html>
-  <h1>Welcome to Planet Detroit Data Hub</h1>
-          <p>Here you will find links to data that we have gathered and with data pertaining to environmental issues in Metro Detroit.
-            Here is a quick guide for using this site!</p>
+  <h1>Welcome to Planet Detroit Resource Hub</h1>
+          <p>The hope for this site is that it will house links to relevant information for journalists, activists, academics, lawyers
+            and anyone interested in learning more about the environment from websites, studies, and data. </p>
    <h2>Instructions for use</h2>
        <h3>Getting Data</h3>
           <p>Under the <a href="https://planet-detroit.github.io/data-hub/datasets/">&lsquo;Datasets&rsquo;</a> tab is the data catalog.
@@ -22,33 +22,31 @@ permalink: /about/
          If your data set comes in multiple forms they should each be linked separately.&nbsp;</p>
         <p>If your data is from an existing Organization:&nbsp;</p>
           <ol>
-              <li>Under the <a href="https://planet-detroit.github.io/data-hub/datasets/">&lsquo;Datasets&rsquo;</a> tab click the <a href="https://planet-detroit.github.io/data-hub/add-dataset/">&lsquo;Add Dataset&rsquo;</a> button</li>
+              <li>Under the <a href="https://planet-detroit.github.io/data-hub/datasets/">&lsquo;Datasets&rsquo;</a> tab click the 
+                <a href="https://planet-detroit.github.io/data-hub/add-dataset/">&lsquo;Add Dataset&rsquo;</a> button</li>
                <li>Fill in as much of the form as you can</li>
+                <ol>
+                  <li>For each link add a new &lsquo;Resource&rdquo; by clicking the button</li>
+                  <li>Be sure to select as many categories as you think are relevant</li>
+                </ol>
+               <li>Click submit! The data should be visible in the catalog in a few minutes&nbsp;</li>
+          </ol>
+        <p>If your data is <strong>not </strong>from an existing Organization:&nbsp;</p>
+          <ol>
+           <li>First, add a new organization&nbsp;</li>
                <ol>
-<li>For each link add a new &lsquo;Resource&rdquo; by clicking the button</li>
-<li>Be sure to select as many categories as you think are relevant</li>
-</ol>
-<li>Click submit! The data should be visible in the catalog in a few minutes&nbsp;</li>
-</ol>
-<p>If your data is <strong>not </strong>from an existing Organization:&nbsp;</p>
-<ol>
-<li>First, add a new organization&nbsp;</li>
-<ol>
-<li>under the <a href="https://planet-detroit.github.io/data-hub/organizations/">&lsquo;Organizations&rsquo;</a> tab click <a href="https://planet-detroit.github.io/data-hub/add-organization/">&lsquo;Add Organization&rsquo;</a> or the <a href="https://planet-detroit.github.io/data-hub/add-dataset/">&lsquo;Add Dataset&rsquo;</a> page click the &lsquo;+&rsquo; button.</li>
-<li>Fill in as much of the form as you can</li>
-<ul>
-<li>The logo should be a link&nbsp;to an image</li>
-</ul>
-<li>Click submit! The organization should be visible in the catalog in a few minutes&nbsp;</li>
-</ol>
-<li>Go back to the <a href="https://planet-detroit.github.io/data-hub/add-dataset/">&lsquo;Add Dataset&rsquo;</a> page and use the tips above to fill out the form.</li>
-<li>Fill in all the form</li>
-<ol>
-<li>For each link add a new &lsquo;Resource&rdquo; by clicking the button</li>
-<li>Be sure to select as many categories as you think are relevant</li>
-</ol>
-<li>Click submit! The data should be visible in the catalog in a few minutes&nbsp;</li>
-</ol>
+                  <li>under the <a href="https://planet-detroit.github.io/data-hub/organizations/">&lsquo;Organizations&rsquo;</a> 
+                    tab click <a href="https://planet-detroit.github.io/data-hub/add-organization/">&lsquo;Add Organization&rsquo;</a> 
+                    or the <a href="https://planet-detroit.github.io/data-hub/add-dataset/">&lsquo;Add Dataset&rsquo;</a> page click 
+                    the &lsquo;+&rsquo; button.</li>
+                  <li>Fill in as much of the form as you can</li>
+                       <ul>
+                          <li>The logo should be a link&nbsp;to an image</li>
+                       </ul>
+                  <li>Click submit! The organization should be visible in the catalog in a few minutes&nbsp;</li>
+               </ol>
+            <li>Go back to the <a href="https://planet-detroit.github.io/data-hub/add-dataset/">&lsquo;Add Dataset&rsquo;</a> page and use the tips above to fill out the form.</li>
+
 
 
 </html>
