--- a/add-dataset.html
+++ b/add-dataset.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Add Dataset
+title: Add Resource
 permalink: /add-dataset/
 ---
 {% include breadcrumbs.html parent="Datasets" %}
